--- a/style.css
+++ b/style.css
@@ -52,11 +52,11 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 70px 20px;
+  margin: 10px 20px;
 }
 .homepage-content {
   width: 50%;
-  height: 691px;
+  height: 500px;
 }
 .heading-yellow {
   color: #dcac57;
@@ -74,6 +74,16 @@ body {
   font-style: normal;
   font-weight: 800;
   line-height: normal;
+}
+.heading-big-2 {
+  color: #fff;
+  margin-top: 70px;
+  font-family: Inter;
+  font-size: 80px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-align: center;
 }
 .heading-h3 {
   color: #fff;
@@ -104,7 +114,7 @@ button {
 }
 .count-project {
   width: 100%;
-  margin-top: 50px;
+  margin-top: 10px;
   height: 166px;
   background: #252836;
   display: flex;
@@ -212,16 +222,22 @@ button {
   border-radius: 15px;
 }
 .contact-us-form {
-  margin: 20px 60px;
-  height: 464px;
+  margin: 5px 5px;
+  height: 380px;
+  width: 500px;
   flex-shrink: 0;
-  border: 4px solid #000;
+  border: 4px dotted #fff;
   border-radius: 15px;
 
   background: #252836;
 }
+.name_phone {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
 form {
-  width: 50%;
+  width: 80%;
   padding: 20px;
   /* border: 1px solid #ccc; */
   border-radius: 8px;
@@ -229,7 +245,7 @@ form {
 }
 input,
 textarea {
-  width: 100%;
+  width: 90%;
   padding: 15px;
   margin-bottom: 16px;
   border: 1px solid black;
@@ -251,7 +267,7 @@ textarea {
   position: absolute;
 
   position: fixed;
-  height: 20%;
+  height: 10%;
   width: 30%;
   top: 50%;
   left: 50%;
@@ -264,6 +280,53 @@ textarea {
 
 .hidden {
   display: none;
+}
+
+#testimonial {
+  background-color: var(--primary-color);
+  padding: 30px 30px;
+}
+.heading-h3 {
+  color: white;
+  font-size: 14px;
+}
+a {
+  text-decoration: none;
+}
+.portfolio-paragraph {
+  font-size: 16px;
+  color: white;
+}
+.testimonial-box-3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  overflow-x: auto;
+  gap: 20px;
+}
+.about-me-img-1 {
+  width: 90px;
+  height: 90px;
+}
+.testimonial-box-1 {
+  padding: 20px 20px;
+  background: #282834;
+  width: 426px;
+  height: 556px;
+  margin-top: 30px;
+  flex: 0 0 auto;
+}
+.testimonial-box-2 {
+  margin-top: 50px;
+}
+.testimonial-box-2 h5 {
+  color: white;
+  font-size: 15px;
+  margin-top: 5px;
+}
+.testimonial-box-2 p {
+  margin-top: 5px;
 }
 button {
   background-color: #ff6f61; /* Button background color */
@@ -491,6 +554,9 @@ button {
     flex-wrap: wrap;
     justify-content: space-around;
   }
+  .heading-big-2 {
+    font-size: 30px;
+  }
 
   #contact-us h3 {
     text-align: center;
@@ -499,16 +565,16 @@ button {
   }
   .contact-us-form {
     margin: 20px auto;
-    height: 464px;
+    height: 380px;
     flex-shrink: 0;
-    border: 4px solid #000;
+    border: 4px dotted #fff;
     background: #252836;
     width: 90%;
   }
   .modal {
     position: absolute;
     position: fixed;
-    height: 10%;
+    height: 20%;
     width: 60%;
     top: 50%;
     left: 50%;
@@ -517,5 +583,17 @@ button {
     padding: 30px;
     z-index: 10;
     border-radius: 25px;
+  }
+  .testimonial-box-1 {
+    padding: 20px 20px;
+    background: #282834;
+    width: 90%;
+    height: 400px;
+    margin-top: 30px;
+    flex: 0 0 auto;
+  }
+  .portfolio-paragraph {
+    font-size: 12px;
+    color: white;
   }
 }
