--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .heading-white {
   display: inline-block;
   color: #fff;
-  font-family: "Inter", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 32px;
   font-style: normal;
   font-weight: 800;
@@ -43,7 +43,7 @@ body {
   margin: 10px;
   color: #d2d2d5;
   font-family: "Inter", sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 500;
 }
@@ -163,7 +163,7 @@ button {
 }
 .what-we-do-item {
   width: 213px;
-  height: 200px;
+  height: 220px;
   background: #252836;
   display: flex;
   align-items: start;
@@ -357,6 +357,29 @@ button {
   background-color: #e65b52; /* Darken background on hover */
   transform: translateY(-2px); /* Slightly lift the button on hover */
 }
+a {
+  text-decoration: none;
+  color: white;
+}
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top: 3px solid white;
+  animation: spin 1s linear infinite;
+  display: none;
+  /* transform: translate(-50%, -50%); */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 #footer {
   margin-top: var(--margin-top-tripple);
   /* margin: auto; */
@@ -430,6 +453,50 @@ button {
 .close-mobile-menu {
   display: none;
 }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+  font-size: 16px;
+  text-align: left;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+th,
+td {
+  padding: 12px;
+  border: 1px solid #ddd;
+}
+th {
+  background-color: #4caf50;
+  color: white;
+  text-transform: uppercase;
+}
+tr:nth-child(even) {
+  background-color: #252836;
+}
+tr:nth-child(odd) {
+  background-color: #1f1d2b;
+}
+td {
+  text-align: center;
+}
+tr:hover {
+  background-color: #0dce3a;
+}
+td:first-child {
+  text-align: left;
+}
+#whyus {
+  color: #fff;
+
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
 
 @media (max-width: 800px) {
   .nav-other-items {
@@ -486,7 +553,7 @@ button {
   }
   .what-we-do-item {
     width: 90%;
-    height: 200px;
+    height: 220px;
     background: #252836;
     display: flex;
     align-items: center;
